Updated features pictures

--- a/src/app/pages/protected-pages/profile-page/components/display-car/display-car.component.html
+++ b/src/app/pages/protected-pages/profile-page/components/display-car/display-car.component.html
@@ -7,10 +7,9 @@
     <app-edit-accessories [selectedAccessories]="car.options"></app-edit-accessories>
     <h4>{{index + 1}} - {{car.brand}} {{car.model}}</h4>
 
-    <img src="https://ik.imagekit.io/h0s40k5ceq/photos/exterior/{{car.colour}}/0.jpg" alt="Exterior">
-    <img src="https://ik.imagekit.io/h0s40k5ceq/photos/interior/{{car.trim}}/4" alt="">
-    <!-- <img src="https://ik.imagekit.io/h0s40k5ceq/photos/wheels/{{car.options[1].value}}/1" alt=""> -->
-    <img src="https://ik.imagekit.io/h0s40k5ceq/photos/interior/{{car.trim}}/4k-head-on.jpg" alt="">
+    <img src="https://ik.imagekit.io/h0s40k5ceq/photos/exterior/{{car.colour}}/1.webp" alt="Exterior">
+    <img src="https://ik.imagekit.io/h0s40k5ceq/photos/interior/{{car.trim}}/4.webp" alt="">
+    <img src="https://ik.imagekit.io/h0s40k5ceq/photos/accessories.webp" alt="">
 
     <div>
       <button class="btn" (click)="updateCar(index, car)">Save Changes</button>
@@ -29,10 +28,10 @@
         <app-edit-trim (trimEvent)="updateTrim($event)" [selectedTrim]="car.trim"></app-edit-trim>
         <app-edit-accessories [selectedAccessories]="car.options"></app-edit-accessories>
 
-        <img src="https://ik.imagekit.io/h0s40k5ceq/photos/exterior/{{car.colour}}/0.jpg" alt="">
-        <img src="https://ik.imagekit.io/h0s40k5ceq/photos/interior/{{car.trim}}/4k-head-on.jpg" alt="">
+        <img src="https://ik.imagekit.io/h0s40k5ceq/photos/exterior/{{car.colour}}/1.webp" alt="">
+        <img src="https://ik.imagekit.io/h0s40k5ceq/photos/interior/{{car.trim}}/4.webp" alt="">
         <!-- <img src="https://ik.imagekit.io/h0s40k5ceq/photos/wheels/{{car.options[1].value}}/1" alt=""> -->
-        <img src="https://ik.imagekit.io/h0s40k5ceq/photos/interior/{{car.trim}}/4k-head-on.jpg" alt="">
+        <img src="https://ik.imagekit.io/h0s40k5ceq/photos/accessories.webp" alt="">
 
         <h4>{{index + 1}} - {{car.brand}} {{car.model}}</h4>
         <button class="btn" (click)="updateCar(index, car)">Save Changes</button>
