--- a/src/app/pages/public-pages/landing-page/components/features/features.component.html
+++ b/src/app/pages/public-pages/landing-page/components/features/features.component.html
@@ -3,59 +3,60 @@
 
   <div id="accordian-wrapper">
     <p-accordion>
-      <p-accordionTab header="Header I" [selected]="true">
+      <p-accordionTab header="Plug-in Hybrid System" [selected]="true">
         <div class="grid">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            velit
+          <p>Want an electic car with a backup plan? We've got you covered. Our plug-in system ensures that your CO2
+            emissions are kept minimal by allowing most of your everyday journeys to be fully electric, while also
+            allowing you to go on long road trips without range anxiety.
+            You can choose from multiple driving modes, making sure you always have the power delivery you want.
+            Featuring regenerative braking and energy consumption tracking, your drivetrain is on the cutting edge of
+            technology.
           </p>
-          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/1080p-architecture.jpg" alt="photo of feature 1">
+          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/1.webp" alt="Charge flap">
         </div>
       </p-accordionTab>
-      <p-accordionTab header="Header II">
+      <p-accordionTab header="All-wheel Drive">
         <div class="grid">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            velit
+          <p>All-wheel drive (AWD) means the car is driving and monitoring all four wheels at the same time, all the
+            time. This improves traction and safety, whist also improving the power and off-road capabilities of the
+            car. Our AWD systems will garantee your ready for any driving conditions that come your way, while avoiding
+            the technical complexity and weight a traditional 4WD system brings on.
           </p>
-          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/1080p-architecture.jpg" alt="photo of feature 1">
+          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/2.webp" alt="Center console">
         </div>
       </p-accordionTab>
-      <p-accordionTab header="Header III">
+      <p-accordionTab header="Collision Avoidance Assistance">
         <div class="grid">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            velit
+          <p>Our collision avoidance function helps reduce the risk of incidents caused by driver error such as drifting
+            out of lanes. The car will guide itself back between the lines by itself without driver input, aided by 360
+            sensors all around the car.
+            The system is run on the world renound Unity engine, known for its award winning computer vision
+            capabilities.
           </p>
-          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/1080p-architecture.jpg" alt="photo of feature 2">
+          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/3.webp" alt="Front camera">
         </div>
       </p-accordionTab>
-      <p-accordionTab header="Header IV">
+      <p-accordionTab header="5-Year Warranty">
         <div class="grid">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            velit
+          <p>We are confident that our cars are built to last, however unforeseen manufacturing issues can occur. That's
+            why with any Volvo purchase, you can have peace of mind that any issues will be covered with our 5-year
+            unlimited milage warranty. Any and all defects will be completely remedied free of charge by our in house
+            Volvo specialist technicians,
+            and of course with 100% genuine OEM parts. Even if you sell your Volvo before the warranty expires, the
+            warranty will be transferred to the new owner,
+            ensuring a smooth and painless transaction.
           </p>
-          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/1080p-architecture.jpg" alt="photo of feature 3">
+          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/4.webp" alt="Brakes">
         </div>
       </p-accordionTab>
       <p-accordionTab header="Coming Soon">
         <div class="grid">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            velit
+          <p>Our customers' lives and families are constantly evolving, and so are our cars. We want to offer our
+            customers a car that's fit for purpose no matter what stage of life they are in, and so coming early next
+            year the S90 wagon. Offering comfort, safety and utility, the S90 wagon will be everything you know and
+            love, with more.
           </p>
-          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/1080p-architecture.jpg" alt="photo of feature 4">
+          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/5.webp" alt="S90 wagon">
         </div>
       </p-accordionTab>
     </p-accordion>
