Fixed typos, added ngsrc requirements

--- a/src/app/core/shared-components/ext-colour-picker/ext-colour-picker.component.html
+++ b/src/app/core/shared-components/ext-colour-picker/ext-colour-picker.component.html
@@ -10,7 +10,7 @@
       <ul>
         <li (click)="updateExterior('Candy Red')">Candy Red</li>
         <li (click)="updateExterior('Sonic Silver')">Sonic Silver</li>
-        <li (click)="updateExterior('Charcol')">Charcol</li>
+        <li (click)="updateExterior('Charcoal')">Charcoal</li>
         <li (click)="updateExterior('Satin Blue')">Satin Blue</li>
       </ul>
 
