--- a/src/app/core/shared-components/int-trim-picker/int-trim-picker.component.html
+++ b/src/app/core/shared-components/int-trim-picker/int-trim-picker.component.html
@@ -3,7 +3,8 @@
 
   <div class="grid" id="trim-picker-wrapper">
     <div id="list-wrapper">
-      <p>Our interior is hand woven leather stuff with suade and stuff</p>
+      <p>The interior of the S90 is made from premium leather and suede materials, solid wood and comes in three
+        different colour variations.</p>
 
       <div>
         <h4>Currently: <i>{{selectedTrim}}</i></h4>
