--- a/src/app/pages/public-pages/landing-page/components/features/features.component.html
+++ b/src/app/pages/public-pages/landing-page/components/features/features.component.html
@@ -12,17 +12,20 @@
             Featuring regenerative braking and energy consumption tracking, your drivetrain is on the cutting edge of
             technology.
           </p>
-          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/1.webp" alt="Charge flap">
+          <img width=2800 height=2000 ngSrc="https://ik.imagekit.io/h0s40k5ceq/photos/features/1.webp" alt="Charge flap"
+            sizes="(max-width: 960px) 80vw, 25vw" ngSrcset=srcSet>
         </div>
       </p-accordionTab>
       <p-accordionTab header="All-wheel Drive">
         <div class="grid">
           <p>All-wheel drive (AWD) means the car is driving and monitoring all four wheels at the same time, all the
             time. This improves traction and safety, whist also improving the power and off-road capabilities of the
-            car. Our AWD systems will garantee your ready for any driving conditions that come your way, while avoiding
+            car. Our AWD systems will guarantee you're ready for any driving conditions that come your way, while
+            avoiding
             the technical complexity and weight a traditional 4WD system brings on.
           </p>
-          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/2.webp" alt="Center console">
+          <img width=2800 height=2000 ngSrc="https://ik.imagekit.io/h0s40k5ceq/photos/features/2.webp"
+            alt="Center console" sizes="(max-width: 960px) 80vw, 25vw" ngSrcset=srcSet>
         </div>
       </p-accordionTab>
       <p-accordionTab header="Collision Avoidance Assistance">
@@ -30,10 +33,11 @@
           <p>Our collision avoidance function helps reduce the risk of incidents caused by driver error such as drifting
             out of lanes. The car will guide itself back between the lines by itself without driver input, aided by 360
             sensors all around the car.
-            The system is run on the world renound Unity engine, known for its award winning computer vision
+            The system is run on the world-renowned Unity engine, known for its award winning computer vision
             capabilities.
           </p>
-          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/3.webp" alt="Front camera">
+          <img width=2800 height=2000 ngSrc="https://ik.imagekit.io/h0s40k5ceq/photos/features/3.webp"
+            alt="Front camera" sizes="(max-width: 960px) 80vw, 25vw" ngSrcset=srcSet>
         </div>
       </p-accordionTab>
       <p-accordionTab header="5-Year Warranty">
@@ -46,7 +50,8 @@
             warranty will be transferred to the new owner,
             ensuring a smooth and painless transaction.
           </p>
-          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/4.webp" alt="Brakes">
+          <img width=2800 height=2000 ngSrc="https://ik.imagekit.io/h0s40k5ceq/photos/features/4.webp" alt="Brakes"
+            sizes="(max-width: 960px) 80vw, 25vw" ngSrcset=srcSet>
         </div>
       </p-accordionTab>
       <p-accordionTab header="Coming Soon">
@@ -56,7 +61,8 @@
             year the S90 wagon. Offering comfort, safety and utility, the S90 wagon will be everything you know and
             love, with more.
           </p>
-          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/5.webp" alt="S90 wagon">
+          <img width=2800 height=2000 ngSrc="https://ik.imagekit.io/h0s40k5ceq/photos/features/5.webp" alt="S90 wagon"
+            sizes="(max-width: 960px) 80vw, 25vw" ngSrcset=srcSet>
         </div>
       </p-accordionTab>
     </p-accordion>
