Fixed pathing for ngsrc

--- a/src/app/core/shared-components/trim-display/trim-display.component.html
+++ b/src/app/core/shared-components/trim-display/trim-display.component.html
@@ -2,24 +2,20 @@
 
   <div id="int-wrapper" class="grid">
     <div>
-      <img width=2800 height=2000
-        [ngSrc]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/1.webp'" alt=""
+      <img width=2800 height=2000 [ngSrc]="'/photos/interior/' + selectedTrim + '/1.webp'" alt=""
         sizes="(max-width: 600px) 100vw, 50vw" [ngSrcset]=srcSet>
     </div>
     <div>
-      <img width=2800 height=2000
-        [ngSrc]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/2.webp'" alt=""
+      <img width=2800 height=2000 [ngSrc]="'/photos/interior/' + selectedTrim + '/2.webp'" alt=""
         sizes="(max-width: 600px) 100vw, 50vw" [ngSrcset]=srcSet>
 
     </div>
     <div>
-      <img width=2800 height=2000
-        [ngSrc]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/3.webp'" alt=""
+      <img width=2800 height=2000 [ngSrc]="'/photos/interior/' + selectedTrim + '/3.webp'" alt=""
         sizes="(max-width: 600px) 100vw, 50vw" [ngSrcset]=srcSet>
     </div>
     <div>
-      <img width=2800 height=2000
-        [ngSrc]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/4.webp'" alt=""
+      <img width=2800 height=2000 [ngSrc]="'/photos/interior/' + selectedTrim + '/4.webp'" alt=""
         sizes="(max-width: 600px) 100vw, 50vw" [ngSrcset]=srcSet>
     </div>
   </div>
