--- a/src/app/pages/public-pages/landing-page/components/features/features.component.html
+++ b/src/app/pages/public-pages/landing-page/components/features/features.component.html
@@ -12,8 +12,8 @@
             Featuring regenerative braking and energy consumption tracking, your drivetrain is on the cutting edge of
             technology.
           </p>
-          <img width=2800 height=2000 ngSrc="https://ik.imagekit.io/h0s40k5ceq/photos/features/1.webp" alt="Charge flap"
-            sizes="(max-width: 960px) 80vw, 25vw" ngSrcset=srcSet>
+          <img width=2800 height=2000 [ngSrc]="'/photos/features/1.webp'" alt="Charge flap"
+            sizes="(max-width: 960px) 80vw, 25vw" [ngSrcset]=srcSet>
         </div>
       </p-accordionTab>
       <p-accordionTab header="All-wheel Drive">
@@ -24,8 +24,8 @@
             avoiding
             the technical complexity and weight a traditional 4WD system brings on.
           </p>
-          <img width=2800 height=2000 ngSrc="https://ik.imagekit.io/h0s40k5ceq/photos/features/2.webp"
-            alt="Center console" sizes="(max-width: 960px) 80vw, 25vw" ngSrcset=srcSet>
+          <img width=2800 height=2000 [ngSrc]="'/photos/features/2.webp'" alt="Center console"
+            sizes="(max-width: 960px) 80vw, 25vw" [ngSrcset]=srcSet>
         </div>
       </p-accordionTab>
       <p-accordionTab header="Collision Avoidance Assistance">
@@ -36,8 +36,8 @@
             The system is run on the world-renowned Unity engine, known for its award winning computer vision
             capabilities.
           </p>
-          <img width=2800 height=2000 ngSrc="https://ik.imagekit.io/h0s40k5ceq/photos/features/3.webp"
-            alt="Front camera" sizes="(max-width: 960px) 80vw, 25vw" ngSrcset=srcSet>
+          <img width=2800 height=2000 [ngSrc]="'/photos/features/3.webp'" alt="Front camera"
+            sizes="(max-width: 960px) 80vw, 25vw" [ngSrcset]=srcSet>
         </div>
       </p-accordionTab>
       <p-accordionTab header="5-Year Warranty">
@@ -50,8 +50,8 @@
             warranty will be transferred to the new owner,
             ensuring a smooth and painless transaction.
           </p>
-          <img width=2800 height=2000 ngSrc="https://ik.imagekit.io/h0s40k5ceq/photos/features/4.webp" alt="Brakes"
-            sizes="(max-width: 960px) 80vw, 25vw" ngSrcset=srcSet>
+          <img width=2800 height=2000 [ngSrc]="'/photos/features/4.webp'" alt="Brakes"
+            sizes="(max-width: 960px) 80vw, 25vw" [ngSrcset]=srcSet>
         </div>
       </p-accordionTab>
       <p-accordionTab header="Coming Soon">
@@ -61,8 +61,8 @@
             year the S90 wagon. Offering comfort, safety and utility, the S90 wagon will be everything you know and
             love, with more.
           </p>
-          <img width=2800 height=2000 ngSrc="https://ik.imagekit.io/h0s40k5ceq/photos/features/5.webp" alt="S90 wagon"
-            sizes="(max-width: 960px) 80vw, 25vw" ngSrcset=srcSet>
+          <img width=2800 height=2000 [ngSrc]="'/features/5.webp'" alt="S90 wagon" sizes="(max-width: 960px) 80vw, 25vw"
+            [ngSrcset]=srcSet>
         </div>
       </p-accordionTab>
     </p-accordion>
