--- a/src/app/pages/public-pages/landing-page/components/customisation/customisation.component.html
+++ b/src/app/pages/public-pages/landing-page/components/customisation/customisation.component.html
@@ -3,9 +3,8 @@
   <div id="customisation-wrapper" class="grid">
 
     <div>
-      <img class="g-area" width=2800 height=2000
-        ngSrc="https://ik.imagekit.io/h0s40k5ceq/photos/carousel/silhouette.webp" alt="Silhouette of Volvo S90"
-        sizes="(max-width: 600px) 100vw, 50vw" ngSrcset=srcSet>
+      <img class="g-area" width=2800 height=2000 [ngSrc]="'/photos/carousel/silhouette.webp'"
+        alt="Silhouette of Volvo S90" sizes="(max-width: 600px) 100vw, 50vw" [ngSrcset]=srcSet>
     </div>
 
     <div class="g-area">
