Fix features img hieght

--- a/src/app/pages/public-pages/landing-page/components/features/features.component.scss
+++ b/src/app/pages/public-pages/landing-page/components/features/features.component.scss
@@ -2,6 +2,10 @@
   grid-template-columns: 1fr 1fr;
 }
 
+img {
+  height: auto;
+}
+
 // For mobile
 .small-screen {
   .grid {
@@ -11,6 +15,5 @@
 
   img {
     width: 80%;
-    height: auto;
   }
 }
