--- a/src/app/core/shared-components/trim-display/trim-display.component.html
+++ b/src/app/core/shared-components/trim-display/trim-display.component.html
@@ -2,21 +2,16 @@
 
   <div id="int-wrapper" class="grid">
     <div>
-      <img width=2800 height=2000 [ngSrc]="'/photos/interior/' + selectedTrim + '/1.webp'" alt=""
-        sizes="(max-width: 600px) 100vw, 50vw" [ngSrcset]=srcSet>
+      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/1.webp'" alt="">
     </div>
     <div>
-      <img width=2800 height=2000 [ngSrc]="'/photos/interior/' + selectedTrim + '/2.webp'" alt=""
-        sizes="(max-width: 600px) 100vw, 50vw" [ngSrcset]=srcSet>
-
+      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/2.webp'" alt="">
     </div>
     <div>
-      <img width=2800 height=2000 [ngSrc]="'/photos/interior/' + selectedTrim + '/3.webp'" alt=""
-        sizes="(max-width: 600px) 100vw, 50vw" [ngSrcset]=srcSet>
+      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/3.webp'" alt="">
     </div>
     <div>
-      <img width=2800 height=2000 [ngSrc]="'/photos/interior/' + selectedTrim + '/4.webp'" alt=""
-        sizes="(max-width: 600px) 100vw, 50vw" [ngSrcset]=srcSet>
+      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/4.webp'" alt="">
     </div>
   </div>
 
