Bring main up to date with gh-pages

--- a/frontend/src/app/core/shared-components/int-trim-picker/int-trim-picker.component.html
+++ b/frontend/src/app/core/shared-components/int-trim-picker/int-trim-picker.component.html
@@ -3,14 +3,15 @@
 
   <div class="grid" id="trim-picker-wrapper">
     <div id="list-wrapper">
-      <p>Our interior is hand woven leather stuff with suade and stuff</p>
+      <p>The interior of the S90 is made from premium leather and suede materials, solid wood and comes in three
+        different colour variations.</p>
 
       <div>
         <h4>Currently: <i>{{selectedTrim}}</i></h4>
 
         <ul>
           <li (click)="updateTrim('Black')">Black</li>
-          <li (click)="updateTrim('Beige')">Beige</li>
+          <li (click)="updateTrim('Tan')">Tan</li>
           <li (click)="updateTrim('Two-Tone')">Two-Tone</li>
         </ul>
       </div>
