--- a/frontend/src/app/core/shared-components/trim-display/trim-display.component.html
+++ b/frontend/src/app/core/shared-components/trim-display/trim-display.component.html
@@ -2,19 +2,16 @@
 
   <div id="int-wrapper" class="grid">
     <div>
-      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/4k-head-on.jpg'" alt="">
+      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/1.webp'" alt="">
     </div>
     <div>
-      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/1080p-water.jpg'" alt="">
-
+      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/2.webp'" alt="">
     </div>
     <div>
-      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/1080p-evening-bridge.jpg'"
-        alt="">
+      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/3.webp'" alt="">
     </div>
     <div>
-      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/1080p-architecture.jpg'"
-        alt="">
+      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/4.webp'" alt="">
     </div>
   </div>
 
